workshop03/app.yaml
---
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  name: bggapp-deploy 
  namespace: bggns
  labels:
    app: bgg
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bgg
  template: 
    metadata:
      name: bggapp
      labels:
        app: bgg
    spec:
      containers:
      - name: bggapp-container
        image: chukmunnlee/bgg-app:nov-2025
        imagePullPolicy: IfNotPresent
        # able to retrieve from config yaml
        # envFrom:
        # - configMap:
        #   name: bgg-cm
        # - secret: 
        #   name: bgg-secret
        ports:
        - containerPort: 5000
        resources:
          requests: 
            cpu: 64m
            memory: 96Mi
          limits: 
            cpu: 64m
            memory: 96Mi
        # readinessProbe:
        #   command:
        #   - /bin/sh
        #   - -c
        #   - "ls /opt/ready.txt"
        livenessProbe:
          initialDelaySeconds: 15
          periodSeconds: 60
          timeoutSeconds: 5
          httpGet: 
            path: /healthz
            port: 5000


---
apiVersion: v1 
kind: Service 
metadata: 
  name: bggapp-svc
  namespace: bggns
  labels:
    app: bgg
spec: 
  type: LoadBalancer
  selector: 
    app: bgg
  ports:
  - port: 80 # 5000
    targetPort: 5000
