workshop03/database.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bggns
  labels:
    app: bgg

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: bggdb-deploy
  namespace: bggns
  labels:
    app: bgg
spec: 
  replicas: 1
  selector: 
    matchLabels:
      app: bgg
  template: 
    metadata:
      labels: 
        app: bgg
    spec: 
      volumes:
      - name: data-vol
        persistentVolumeClaim:
          claimName: bggdb-pvc
      containers: 
      - name: bggdb-container
        image: chukmunnlee/bgg-database:nov-2025
        imagePullPolicy: Always
        ports:
        - containerPort: 3306
        volumeMounts: 
        - name: data-vol
          mountPath: /var/lib/mysql

---
apiVersion: v1 
kind: Service 
metadata: 
  name: bggdb-svc
  namespace: bggns
  labels:
    app: bgg
spec: 
  type: ClusterIP
  selector: 
    app: bgg
  ports:
  - port: 3306
    targetPort: 3306
