workshop03/ingress.yaml
---
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: bggapp-ing
  namespace: bggns
spec: 
  ingressClassName: nginx 
  rules: 
  - host: bgg-167.172.5.145.sslip.io
    http:
      paths:
      - path: / 
        pathType: Prefix
        backend:
          service:
            name: bggapp-ing-svc 
            port:
              number: 5000
